# llama-likes

./: .env  .pre-commit-config.yaml  README.md  ai_versus_human.ipynb  pyproject.toml
src/llama_likes/: __init__.py  build_openai_prompt.py  elo.py  ranker.py
src/llama_likes/core/: core.py  huggingface_client.py
src/llama_likes/llama/: build_llama_request.py  llama_ranker.py
src/llama_likes/openai/: build_openai_prompt.py  openai_ranker.py
tests/: conftest.py
tests/llama_likes/: test_elo.py  test_ranker.py
tests/llama_likes/core/: test_core.py  test_huggingface_client.py
tests/llama_likes/llama/: test_llama_ranker.py  test_ranker.py
tests/llama_likes/openai/: test_openai_ranker.py
